General: Fix two issues in the dark mode (#5107)

--- a/src/main/webapp/content/scss/themes/_dark-variables.scss
+++ b/src/main/webapp/content/scss/themes/_dark-variables.scss
@@ -513,8 +513,8 @@ $artemis-alert-success-color: $success;
 $artemis-alert-success-background: darken($success, 30);
 $artemis-alert-success-border: darken($success, 5);
 $artemis-alert-neutral-color: white;
-$artemis-alert-neutral-background: darken(white, 30);
-$artemis-alert-neutral-border: darken(white, 5);
+$artemis-alert-neutral-background: darken($gray-600, 20%);
+$artemis-alert-neutral-border: $gray-600;
 
 $close-circle-color: white;
 $close-circle-background: $gray-900;
